# csgo-sdk

./: Cargo.toml  LICENSE  README.md
src/: interface.rs  lib.rs  netvar.rs
src/classes/: entity.rs  mod.rs  utl_vector.rs  weapon.rs
src/definitions/: bones.rs  frame_stage.rs  mod.rs  recv_props.rs  weapon_data.rs
src/interfaces/: client.rs  client_mode.rs  convar.rs  engine.rs  engine_sound.rs  engine_trace.rs  entity_list.rs  game_events.rs  globals.rs  glow.rs  input.rs  input_system.rs  key_values_system.rs  localize.rs  material.rs  material_system.rs  mod.rs  model_info.rs  model_render.rs  panel.rs  physics_surface_props.rs  prediction.rs  render_view.rs  surface.rs  view_render_beams.rs
src/utils/: error.rs  memory.rs  mod.rs  patterns.rs  platform.rs
src/utils/macros/: mod.rs
src/utils/math/: matrix.rs  mod.rs  vector.rs
src/utils/string/: mod.rs
