[package]
name = "sdk"
version = "1.0.0"
edition = "2018"
authors = ["joshi"]
license-file = "LICENSE"

[features]
default = ["std"]
std = []

[dependencies]
# weapon id
num-derive = "0.3.3"
# encrypt strings
obfstr = "0.3.0"
static_init = "1.0.1"
fehler = "1.0.0"

# c utils
[dependencies.libc]
version = "0.2.103"
default-features = false

[dependencies.custom_error]
version = "1.9.2"
default-features = false

# cstr no-std
[dependencies.cstr_core]
version = "0.2.4"
default-features = false

[dependencies.num-traits]
version = "0.2.14"
default-features = false
features = [
    "libm"
]

[dependencies.winapi]
version = "0.3.9"
default-features = false
features = [
    "libloaderapi",
    "winnt",
    "minwindef",
    "windef"
]